--- a/hw2/main.html
+++ b/hw2/main.html
@@ -5,27 +5,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="../hw3/style.css">
 </head>
 
 <body>
 	<a href="main.html">Главная</a>
 	<a href="contacts.html">Контакты</a>
-	<h1>Lorem, ipsum dolor.</h1>
-	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, aperiam.</p>
-	<h3>Lorem, ipsum dolor.</h3>
-	<h4>Lorem ipsum dolor sit amet.</h4>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A facere officiis asperiores beatae dolores eum.</p>
-	<h3>Lorem, ipsum dolor.</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, sed.</p>
-	<h3>Lorem, ipsum dolor.</h3>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, culpa.</p>
+	<h1 class='heading'>Lorem, ipsum dolor.</h1>
+	<p class='text'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, aperiam.</p>
+	<h3 class='heading3'>Lorem, ipsum dolor.</h3>
+	<h4 class='heading4'>Lorem ipsum dolor sit amet.</h4>
+	<p class='text'>Lorem ipsum dolor sit amet consectetur adipisicing elit. A facere officiis asperiores beatae dolores
+		eum.</p>
+	<h3 class='heading3'>Lorem, ipsum dolor.</h3>
+	<p class='text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, sed.</p>
+	<h3 class='heading3'>Lorem, ipsum dolor.</h3>
+	<p class='text'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, culpa.</p>
 	<hr>
 	<ul>
 		<li>Lorem ipsum dolor sit amet.</li>
 		<li>88008888888</li>
 		<li>email@email.com</li>
 	</ul>
-	<p>&copy; Все права защищены</p>
+	<p class='text'>&copy; Все права защищены</p>
 </body>
 
 </html>
