--- a/hw2/contacts.html
+++ b/hw2/contacts.html
@@ -5,46 +5,47 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="../hw3/style.css">
 </head>
 
 <body>
 	<a href="main.html">Главная</a>
 	<a href="contacts.html">Контакты</a>
-	<h2>Контакты</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, tenetur!</p>
+	<h2 class='heading2'>Контакты</h2>
+	<p class='text'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, tenetur!</p>
 	<img src="https://www.w3schools.com/css/klematis4_big.jpg" alt="#">
-	<h4>Address</h4>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-	<h4>Phone</h4>
+	<h4 class='heading4'>Address</h4>
+	<p class='text'>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+	<h4 class='heading4'>Phone</h4>
 	<ul>
 		<li>87777777777</li>
 		<li>89999999999</li>
 	</ul>
-	<h4>Online service</h4>
+	<h4 class='heading4'>Online service</h4>
 	<ul>
 		<li><a href="https://www.google.com/">Сайт</a></li>
 		<li><a href="asd@gamil.com">Email</a></li>
 	</ul>
-	<p>Кемерово, Ул. Ленина, +79999999999</p>
-	<h4>Send us message</h4>
-	<p>Full name <input type="text"></p>
-	<p>Email <input type="email"></p>
-	<p>Message</p>
-	<textarea cols="30" rows="10"></textarea>
-	<button type="submit">Submit</button>
+	<p class='text'>Кемерово, Ул. Ленина, +79999999999</p>
+	<h4 class='heading4'>Send us message</h4>
+	<p class='text'>Full name <input class='input' type="text"></p>
+	<p class='text'>Email <input class='input' type="email"></p>
+	<p class='text'>Message</p>
+	<textarea class='input' cols="30" rows="10"></textarea>
+	<button class='submit-button' type="submit">Submit</button>
 	<div>
 		<script type="text/javascript" charset="utf-8" async
 			src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A33f4684ccd7ba2dd3ca8159feabf2f953366ee5cb8482c219f9b4eebb4e79b63&amp;width=600&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 	</div>
-	<h3>Lorem, ipsum dolor.</h3>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, explicabo.</p>
+	<h3 class='heading3'>Lorem, ipsum dolor.</h3>
+	<p class='text'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, explicabo.</p>
 	<hr>
 	<ul>
 		<li>Lorem ipsum dolor sit amet.</li>
 		<li>88008888888</li>
 		<li>email@email.com</li>
 	</ul>
-	<p>&copy; Все права защищены</p>
+	<p class='text'>&copy; Все права защищены</p>
 </body>
 
 </html>
